--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -40,13 +40,19 @@ body {
 
 /* Mobile First Styles */
 .header {
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 56px;
+    background-color: var(--main-background);
+    z-index: 3000;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.05);
 }
 
 .header-section {
     height: fit-content;
-    padding: 20px 30px 0;
+    padding: 76px 30px 0;
 }
 
 .uppercase {
@@ -288,6 +294,7 @@ main {
     display: flex;
     flex-direction: column;
     gap: 70px;
+    overflow: hidden;
 }
 
 .text-box {
@@ -811,7 +818,7 @@ main .promotion {
 }
 
 .nav-btn:hover {
-    background: --btn-hover-color;
+    background: var(--btn-hover-color);
     color: white;
 }
 
@@ -920,6 +927,7 @@ input {
     bottom: 15px;
     z-index: 999;
     display: flex;
+    flex-direction: column;
     gap: 35px;
 }
 
@@ -1056,6 +1064,18 @@ input {
         background-color: transparent;
     }
 
+    .header {
+        position: static;
+        height: auto;
+        padding: 20px 0 90px;
+        box-shadow: none;
+    }
+
+    .header-section {
+        height: fit-content;
+        padding: 20px 30px 0;
+    }
+
     .main-menu {
         display: flex;
         font-size: 1rem;
@@ -1173,6 +1193,11 @@ input {
     .footer-nav ul {
         gap: 38px;
         flex-direction: row;
+    }
+
+    .sticky-items {
+        flex-direction: row;
+        gap: 35px;
     }
 
 }
