--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -711,7 +711,7 @@ main .promotion {
 
 .reviews-btn-container,
 .review-card:nth-of-type(odd) {
-    display: none;
+    display: flex;
 }
 
 .review-card {
@@ -802,7 +802,7 @@ main .promotion {
 
 .reviews-btn-container {
     gap: 16px;
-    margin-top: 120px;
+    margin-top: 20px;
 }
 
 .nav-btn {
@@ -1009,6 +1009,11 @@ input {
     .reviews-btn-container,
     .review-card:nth-of-type(odd) {
         display: flex;
+    }
+
+    .reviews-btn-container {
+        gap: 16px;
+        margin-top: 100px;
     }
 
     .carousel-container {
