--- a/assets/styles/shop.css
+++ b/assets/styles/shop.css
@@ -51,21 +51,21 @@
     margin-bottom: 15px;
 }
 
-.breadcrumbs {
+.navigation-path {
     font-size: 16px;
 }
 
-.breadcrumbs a {
+.navigation-path a {
     color: var(--regular-text-color);
     text-decoration: none;
     transition: color 0.3s;
 }
 
-.breadcrumbs a:hover {
+.navigation-path a:hover {
     color: var(--main-color);
 }
 
-.breadcrumbs span {
+.navigation-path span {
     color: var(--main-color);
     font-weight: 500;
 }
