fixed value error

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -802,7 +802,7 @@ h2 {
 }
 
 .availability {
-    font-weight: 400px;
+    font-weight: 400;
     font-size: 12px;
     line-height: 20px;
     color: var(--availability-text-color);
